style.css
body {
    background-color: #C6DBE7;
    margin: 0;
    padding: 0;
    font-family: 'Arial', Sans-Serif;
}

.currentTab {
    color: #808080 !important;
}

.nav {
    color: #000000;
    list-style: none;
    text-align: center;
    padding: 20px 0 20px 0;
}

.nav > li {
    display: inline-block;
    padding: 0 25px 0 25px;
    font-size: 16px;
}

.nav > li > a {
    text-decoration: none;
    color: #000000;
}

.nav > li > a:hover {
    color: #808080;
}

.logo {
    margin-top: 50px;
}

.logo > a img {
    margin-left: auto;
    margin-right: auto;
    display: block;
}

.about {
    margin-top: 50px;
    margin-left: auto;
    margin-right: auto;
}
.about > a {
    margin-left: 100px;
    margin-top: 50px;
    display: block;
}

.edu {
    width: 100%;
    margin-top: 50px;
    display: block;
}
.edu-image {
    width: 100%;
    display: block;
}

.cont {
    width: 1500px;
    margin-top: 50px;
    margin-left: -50px;
}

.contactMethod {
    width: 290px;
    height: 200px;
    margin: 10px 10px;
    border: 1px solid #000000;
    padding: 0 5px;
    float: right;
}

.contactMethod > h1 {
    font-family: 'Arial', Sans-Serif;
    font-size: 16px;
    font-weight: normal;
    text-align: center;
    background-color: #000000;
    color: #FFFFFF;
    padding: 10px 0;
    margin: 0 -6px;
}

.contactLinks {
    max-width: 200px;
    margin: 25px 40px;
}

.contactLinks:hover {
    opacity: 0.2;
}

#github, #linkedin {
    margin: 20px 82px !important;
}

